Implement get series by id
