# api/openapi/phimtor_api.yml
@@ -80,6 +80,35 @@ paths:
         500:
           $ref: "#/components/responses/InternalError"
 
+  /series/{id}:
+    get:
+      operationId: getSeries
+      summary: Get series by id
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int64
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                title: GetSeriesResponse
+                type: object
+                properties:
+                  series:
+                    $ref: '#/components/schemas/Series'
+                required:
+                  - series
+        400:
+          $ref: "#/components/responses/BadRequest"
+        500:
+          $ref: "#/components/responses/InternalError"
+
 
 components:
   responses:
@@ -204,6 +233,63 @@ components:
         - releaseYear
         - score
         - durationInMinutes
+        - videoId
+
+    Series:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        title:
+          type: string
+        originalTitle:
+          type: string
+        description:
+          type: string
+        posterLink:
+          type: string
+        releaseYear:
+          type: integer
+        score:
+          type: number
+        durationInMinutes:
+          type: integer
+        totalEpisodes:
+          type: integer
+        currentEpisode:
+          type: integer
+        episodes:
+          type: array
+          items:
+            $ref: '#/components/schemas/Episode'
+      required:
+        - id
+        - title
+        - originalTitle
+        - description
+        - posterLink
+        - releaseYear
+        - score
+        - durationInMinutes
+        - totalEpisodes
+        - currentEpisode
+        - episodes
+
+    Episode:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        name:
+          type: string
+        videoId:
+          type: integer
+          format: int64
+      required:
+        - id
+        - name
         - videoId
 
     Video:
